[project]
name = "gmn_adpater"
description = ""
authors = [
    {name = "Mark Servilla", email = "mark.servilla@gmail.com"}
]
requires-python = ">=3.14.2,<3.15"
dependencies = [
    "requests>=2.32.5,<3",
    "daiquiri>=3.0.0,<4",
    "sqlalchemy>=2.0.45,<3",
    "dataone-common",
    "dataone-libclient",
    "pyxb-x",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "hatchling",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/gmn_adapter/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.wheel]
packages = ["src/gmn_adapter"]

[tool.hatch.build.targets.sdist]
only-include = ["src/gmn_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
